More content and images

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -12,6 +12,8 @@
 
   const org = {
     repos: 'https://github.com/orgs/inputlabs/repositories?sort=name',
+    fw_releases: 'https://github.com/inputlabs/alpakka_firmware/releases/',
+    fw_release: 'https://github.com/inputlabs/alpakka_firmware/releases/tag/',
     roadmap: 'https://github.com/orgs/inputlabs/projects/2',
     forum: 'https://github.com/orgs/inputlabs/discussions',
     discord: 'https://discord.gg/s8Yb4pfusT',
